--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -6,19 +6,21 @@
 html,
 body {
   min-width: 320px;
-  font-family: "Exo 2.0 Thin", "Arial", sans-serif;
-  font-size: 15px;
-  font-weight: normal;
-  line-height: 24px;
-
-  background-color: #000000;
-  color: #ffffff;
+  height: 100%;
   margin: 0;
   padding: 0;
+  font-family: "Trebuchet MS", sans-serif;
+  font-size: 14px;
+  font-weight: normal;
+  line-height: 1.2;
+  color: #000000;
+  background-color: #908d8d;
+  background-image: url("../img/Pattern.png");
+  background-size: cover;
+  box-shadow: inset 0 300px 200px -270px #000 , inset 0 -400px 200px -370px #000;
 }
 
 @import "comment";
-@import "container";
 @import "desc";
 @import "footer";
 @import "param";
