--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -6,8 +6,7 @@
 html,
 body {
   min-width: 320px;
-  height: 100%;
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
   font-family: "Trebuchet MS", sans-serif;
   font-size: 14px;
@@ -17,12 +16,12 @@ body {
   background-color: #908d8d;
   background-image: url("../img/Pattern.png");
   background-size: cover;
-  box-shadow: inset 0 300px 200px -270px #000 , inset 0 -400px 200px -370px #000;
 }
 
 @import "comment";
 @import "desc";
 @import "footer";
+@import "page";
 @import "param";
 @import "product";
 @import "products";
