--- a/source/sass/blocks/product.scss
+++ b/source/sass/blocks/product.scss
@@ -14,6 +14,30 @@
     border-radius: 0 10px 10px 10px;
     z-index: 8;
   }
+
+  &--selected::before {
+    content: "";
+    position: absolute;
+    top: -5px;
+    left: -5px;
+    width: 290px;
+    height: 485px;
+    background-image: linear-gradient(135deg, transparent 5.3%, #d91667 0);
+    border-radius: 0 10px 10px 10px;
+    z-index: 8;
+  }
+
+  &--disabled::before {
+    content: "";
+    position: absolute;
+    top: -5px;
+    left: -5px;
+    width: 290px;
+    height: 485px;
+    background-image: linear-gradient(135deg, transparent 5.3%, #b3b3b3 0);
+    border-radius: 0 10px 10px 10px;
+    z-index: 8;
+  }
 }
 
 .product__photo {
@@ -26,19 +50,31 @@
   background-position: 50% 186%;
   border-radius: 0 10px 10px 10px;
   z-index: 10;
+
+  &--disabled {
+    background-image: url("../img/Photo-opacity.png"), linear-gradient(135deg, transparent 5%, #f2f2f2 0);
+  }
 }
 
 .product__title {
   margin: 0;
   font-size: 46px;
   color: #000000;
+
+  &--disabled {
+    opacity: 0.5;
+  }
 }
 
 .product__subtitle {
   margin: 0;
-  padding-bottom: 14px;
+  padding-bottom: 12px;
   font-size: 24px;
   color: #000000;
+
+  &--disabled {
+    opacity: 0.5;
+  }
 }
 
 @media (min-width: 768px) {
@@ -58,8 +94,56 @@
       top: -5px;
       left: -5px;
       width: 320px;
-      height: 480px;
+      height: 482px;
       background-image: linear-gradient(135deg, transparent 5.3%, #1698d9 0);
+      border-radius: 0 10px 10px 10px;
+      z-index: 8;
+    }
+
+    &--hover::before {
+      content: "";
+      position: absolute;
+      top: -5px;
+      left: -5px;
+      width: 320px;
+      height: 482px;
+      background-image: linear-gradient(135deg, transparent 5.3%, #2ea8e6 0);
+      border-radius: 0 10px 10px 10px;
+      z-index: 8;
+    }
+
+    &--selected::before{
+      content: "";
+      position: absolute;
+      top: -5px;
+      left: -5px;
+      width: 320px;
+      height: 482px;
+      background-image: linear-gradient(135deg, transparent 5.3%, #d91667 0);
+      border-radius: 0 10px 10px 10px;
+      z-index: 8;
+    }
+
+    &--selected-hover::before {
+      content: "";
+      position: absolute;
+      top: -5px;
+      left: -5px;
+      width: 320px;
+      height: 482px;
+      background-image: linear-gradient(135deg, transparent 5.3%, #e62e7a 0);
+      border-radius: 0 10px 10px 10px;
+      z-index: 8;
+    }
+
+    &--disabled::before {
+      content: "";
+      position: absolute;
+      top: -5px;
+      left: -5px;
+      width: 320px;
+      height: 482px;
+      background-image: linear-gradient(135deg, transparent 5.3%, #b3b3b3 0);
       border-radius: 0 10px 10px 10px;
       z-index: 8;
     }
@@ -87,15 +171,8 @@
   }
 
   .product__photo {
-    position: relative;
     width: 258px;
     margin-bottom: 18px;
     padding: 15px 10px 10px 42px;
-    background-image: url("../img/Photo.png"),
-                      linear-gradient(135deg, transparent 5%, #f2f2f2 0);
-    background-repeat: no-repeat;
-    background-position: 50% 186%;
-    border-radius: 0 10px 10px 10px;
-    z-index: 10;
   }
 }
